css/style.css
* {
	font-family: 'Raleway', sans-serif;
	color: #2d3c49;
}

h1,h2,h3,h4,h5 {
	letter-spacing: 2px;
}

h1 {font-size: 2.9em;}
h2 {font-size: 1.9em;}
h3 {font-size: 1.2em;}
p {font-size: 0.89em;}


body {
	margin: 0 auto;
	max-width: 900px;
}

header, main, #featured-work .list {
	display: flex;
	flex-wrap: wrap;
}

header, main > section {
	margin-bottom: 1em;
	margin-left:0.5em;
	margin-right:0.5em; 
}

/*header*/
header {
	border-bottom: 5px solid #7d97ad;
	padding: 1.5em 0;
}

#logo img {width: 90px; height: auto;} 

#branding h1 { margin-bottom: 0.2em; margin-top: 0em;}

#branding h3 { margin-top: 0.2em; margin-bottom: 0em;}

#jumbotron img {
	width:100%;
}

/*main*/
#featured-work {
	margin-left: 0em;
	margin-right: 0em;
}

#featured-work > h2.title {
	margin-top: 0em;
	margin-left:0.5em;
} 

#featured-work .list .title {
	text-align: center;
}
#featured-work .list .item {
	margin-bottom: 1.4em;
} 

#featured-work .list .item .title {
	margin-bottom: 0.2em;
	margin-top: 0.4em;
}

#featured-work .list .item img {
	width: 100%;
}

#featured-work .list .item p {
	text-align:center;
	word-wrap: break-word;
	margin-top:0.2em;
}

#featured-work .list .item > div {
	padding: 0 0.5em;
} 

/*responsiveness*/

@media screen and (max-width: 549px) {
	/*Header*/
	#logo {width: 100%; order:0; text-align:center;}
	#branding {width:100%; order: 1; text-align:center;}

	/*Main*/
	#jumbotron {width: 100%; order: 0;}
	#featured-work {width: 100%; order: 1;}
	#featured-work .list .item {width: 100%;}
}

@media screen and (min-width: 550px) {
	/*Header*/
	#logo {width: 30%; order: 0; display: flex; align-items: center;}
	#branding {width: 70%; order: 1; text-align: right;}

	/*Main*/
	#jumbotron {width: 100%; order: 0;}

	#featured-work {width: 100%; order: 1;}
	#featured-work .list .item {width: 33.3333%;} 
}

